# iso3166-1.rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md
examples/: all.rs  alpha2.rs  alpha3.rs  name.rs  num.rs  num_range.rs
scripts/: update_codes.py
src/: codes.rs  lib.rs
tests/: lib.rs
